--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vueuse/core": "^9.9.0",
     "axios": "^1.2.1",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
